--- a/app/src/main/res/layout/solar_controls.xml
+++ b/app/src/main/res/layout/solar_controls.xml
@@ -23,6 +23,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_bg"
     android:padding="10dp"
+    android:layout_gravity="center_vertical"
     android:orientation="vertical"
     android:visibility="visible">
 
