--- a/app/src/main/res/layout/solar_controls.xml
+++ b/app/src/main/res/layout/solar_controls.xml
@@ -19,12 +19,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/testview"
-    android:layout_width="200dp"
+    android:layout_width="230dp"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_bg"
-    android:padding="10dp"
-    android:layout_gravity="center_vertical"
     android:orientation="vertical"
+    android:padding="10dp"
     android:visibility="visible">
 
     <TextView
@@ -32,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Item Name:"
+        android:textColor="@color/colorWhite"
         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
     <EditText
@@ -46,21 +46,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="2dp"
-        android:text="Item Description:"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        android:text="Substitutions:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/colorWhite" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine" />
+        android:ems="10"/>
 
     <Button
         android:id="@+id/done"
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:text="Done"
+        android:text="Add Pin"
         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
 </LinearLayout>
