--- a/app/src/main/res/layout/fragment_item_list_row.xml
+++ b/app/src/main/res/layout/fragment_item_list_row.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/item_name"
+        android:layout_width="363dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="item"
+        android:textSize="15sp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+
+    <ImageView
+        android:id="@+id/temp_delete_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"/>
+        android:layout_marginEnd="8dp"
+        android:layout_weight="1"
+        android:tint="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="@+id/item_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/item_name"
+        app:srcCompat="@drawable/ic_delete_black_24dp" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
