--- a/app/src/main/res/layout/solar_controls.xml
+++ b/app/src/main/res/layout/solar_controls.xml
@@ -21,9 +21,9 @@
     android:id="@+id/testview"
     android:layout_width="230dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_bg"
+    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="12dp"
     android:visibility="visible">
 
     <TextView
@@ -31,8 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Item Name:"
-        android:textColor="@color/colorWhite"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/browser_actions_title_color" />
 
     <EditText
         android:id="@+id/nameEntry"
@@ -48,19 +48,27 @@
         android:paddingTop="2dp"
         android:text="Substitutions:"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/colorWhite" />
+        android:textColor="@color/browser_actions_title_color" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"/>
+        android:ems="10" />
 
     <Button
         android:id="@+id/done"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:text="Add Pin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:text="Cancel"
         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
 </LinearLayout>
