--- a/app/src/main/res/menu/menu_bottom_nav_bar.xml
+++ b/app/src/main/res/menu/menu_bottom_nav_bar.xml
@@ -16,8 +16,8 @@
 
     <item
         android:id="@+id/action_AR"
-        android:icon="@drawable/bottom_icon_ar"
+        android:icon="@drawable/icon_add"
         android:title="@string/action_AR"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
 </menu>
